--- a/styles/main.css
+++ b/styles/main.css
@@ -200,21 +200,21 @@
     display: inline-block;
     min-height: 40px;
     margin: 0;
-    padding: 7px 4px 7px 44px;
+    padding: 10px;
     vertical-align: middle;
     font-weight: normal;
-    background: url("../img/checkbox_unchecked.jpg") no-repeat scroll left top;
+    /*background: url("../img/checkbox_unchecked.jpg") no-repeat scroll left top;*/
     cursor: pointer;
     white-space: normal;
 }
 
-#donate .checkbox-container:hover label {
-    background: url("../img/checkbox_unchecked_hover.jpg") no-repeat scroll left top;
-}
+/*#donate .checkbox-container:hover label {*/
+    /*background: url("../img/checkbox_unchecked_hover.jpg") no-repeat scroll left top;*/
+/*}*/
 
-#donate .checkbox-container.selected label, #donate .checkbox-container.selected:hover label {
-    background: url("../img/checkbox_checked.jpg") no-repeat scroll left top;
-}
+/*#donate .checkbox-container.selected label, #donate .checkbox-container.selected:hover label {*/
+    /*background: url("../img/checkbox_checked.jpg") no-repeat scroll left top;*/
+/*}*/
 
 #donate div.donate-select {
     background: url("../img/select_dropdown.jpg") no-repeat scroll right center;
@@ -440,3 +440,58 @@ img.img-responsive {
         text-align: center;
     }
 }
+
+.checkbox label:after,
+.radio label:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.checkbox .cr,
+.radio .cr {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #a9a9a9;
+    width: 1.3em;
+    height: 1.3em;
+    float: left;
+    margin-right: .5em;
+}
+
+.checkbox .cr .cr-icon,
+.radio .cr .cr-icon {
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+}
+
+.radio .cr .cr-icon {
+    margin-left: 0.04em;
+}
+
+.checkbox label input[type="checkbox"],
+.radio label input[type="radio"] {
+    display: none;
+}
+
+.checkbox label input[type="checkbox"] + .cr > .cr-icon,
+.radio label input[type="radio"] + .cr > .cr-icon {
+    transform: scale(3) rotateZ(-20deg);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
+.radio label input[type="radio"]:checked + .cr > .cr-icon {
+    transform: scale(1) rotateZ(0deg);
+    opacity: 1;
+}
+
+.checkbox label input[type="checkbox"]:disabled + .cr,
+.radio label input[type="radio"]:disabled + .cr {
+    opacity: .5;
+}
+
